@@ -15,3 +15,9 @@ river=river
 forest=forest
 dungeon=dungeon
 village=village
+
+settings=settings
+music=music: {0}
+sound=sound: {0}
+language=language
+apply=apply
