@@ -12,3 +12,9 @@ river=rio
 forest=bosque
 dungeon=mazmorra
 village=aldea
+
+settings=opciones
+music=musica: {0}
+sound=sonido: {0}
+language=Idioma
+apply=Aplicar
