@@ -12,3 +12,9 @@ river=rio
 forest=bosque
 dungeon=calabozo
 village=aldea
+
+settings=opcions
+music=musica: {0}
+sound=son: {0}
+language=Lingua
+apply=Aplicar
