@@ -57,6 +57,18 @@ project(":android") {
 
     configurations { natives }
 
+    android.applicationVariants.all { variant ->
+        task("generate${variant.name.capitalize()}Javadoc", type: Javadoc) {
+            description "Generates Javadoc for $variant.name."
+            source = variant.javaCompile.source
+            destinationDir = file("${project.buildDir}/outputs/javadoc/")
+            ext.androidJar = "${android.sdkDirectory}/platforms/${android.compileSdkVersion}/android.jar"
+            doFirst {classpath = files(variant.javaCompile.classpath.files) + files(ext.androidJar)}
+            options.links("http://docs.oracle.com/javase/8/docs/api/");
+            options.links("http://d.android.com/reference/");
+        }
+    }
+
     dependencies {
         implementation project(":core")
         api "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
